[metadata]
name = declearn2
version = 0.0.1
description = declearn code rewrite and API revision
author = Paul Andrey
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: UNIX
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas >= 1.2
    scikit-learn >= 1.0
    tensorflow >= 2.5
    torch >= 1.10

[options.packages.find]
exclude =
    declearn
    declearn.*
    test
    test.*

[options.package_data]
declearn2 = py.typed
