[metadata]
name = declearn
version = 2.0.0.beta1
url = https://gitlab.inria.fr/magnet/declearn/declearn2
description = Declearn - a python package for decentralized learning.
author = Paul Andrey
author_email = paul.andrey@inria.fr
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: UNIX
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.7
install_requires =
    cryptography >= 35.0
    grpcio >= 1.45
    pandas >= 1.2
    scikit-learn >= 1.0
    typing_extensions >= 4.0
    websockets >= 10.1

[options.extras_require]
tensorflow =
    tensorflow >= 2.5
torch =
    torch >= 1.10
tests =
    declearn[tensorflow,torch]
    pytest >= 6.1
    pytest-asyncio

[options.packages.find]
exclude =
    test
    test.*

[options.package_data]
declearn2 = py.typed
